# Task-Flow

./: README.md  cli.py  gui.py  pyproject.toml  requirements.txt  task_manager.py  taskflow.py  test_cli_subprocess.py
.github/: dependabot.yml
.github/workflows/: autopep8.yml  main.yml  python-package.yml
src/: main.py
tests/: test_taskflow.py
